--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header class="cabecera">
     <figure class="contenedor_foto_perfil">
-      <img src="./imagenes/ce6f3dbfa33f12780c3901316becf4b8.jpg" alt="Foto de perfil" height="600px" width="600px">
+      <img src="./imagenes/foto_cv.jpeg" alt="Foto de perfil" height="500px" width="500px">
     </figure>
 
     <section class="nombre_puesto">
